src/component/CartCouponTermsAndConditions/CartCouponTermsAndConditions.style.scss
.couponTermsAndConditionsPopup {
    left: 0px;
    right: 0;
    bottom: 0;
    top: 0;
    position: fixed;
    z-index: 200;
    background-color: rgba(0, 0, 0, 0.5);

    .couponTermsAndConditionsOverlay {
        left: 0;
        right: 0;
        position: fixed;
        left: 50%;
        position: absolute;
        top: 50%;
        transform: translate(-50%, -50%);

        @include mobile {
            position: fixed;
            top: 0;
            transform: none;
        }
    }
    .couponTermsAndConditionsPopupBlock {
        z-index: 92;
        max-width: 500px;
        margin: 0 auto;
        background: #FFFFFF;
        border-radius: 16px;
        padding: 42px 30px;
        padding-top: 10px;
        max-height: 80vh;
        overflow: auto;
        .couponTermsAndConditionsPopupTitle {
            color: #28D9AA;
            font-family: "Avenir Next";
            font-size: 26px !important;
            font-weight: 600 !important;
            letter-spacing: 0;
            line-height: 30px;
            margin-bottom: 30px;
            border-radius: 30px 30px 0 0;
        }
        .couponTermsAndConditionsPopupCloseButton {
            cursor: pointer;
            float: right;
            padding: 0;
            &:before {
                content: "";
                position: absolute;
                top: 2px;
                right: 5px;
                display: inline-block;
                padding: 1px;
                background-image: url(/static/media/icon.12cc0c19.svg);
                background-size: cover;
                height: 16px;
                width: 16px;
            }
            span {
                display: none;
            }

            &_isArabic {
                float: left;
            }
        }

        .couponTermsAndConditionsPopupTitlesWrapper{
            display: flex;
            justify-content: center;
            align-items: center;

            .couponTermsAndConditionsPopupTitles {
                text-transform: none;
                font-family: "Avenir Next";
                font-size: 26px !important;
                font-weight: 600 !important;
                letter-spacing: 0;
                line-height: 30px;
                margin: auto;
                margin-bottom: 30px;
                border-radius: 30px 30px 0 0;
            }
        }
        .couponItemName {
            color: #000000;
            font-family: "Avenir Next";
            font-size: 14px;
            letter-spacing: 0;
            line-height: 19px;
            margin-bottom: 30px;
        }
        .couponItemTermsAndConditionsDes {
            color: #8D8D8D;
            font-family: "Avenir Next";
            font-size: 14px;
            letter-spacing: 0;
            line-height: 19px;
            margin-bottom: 30px;
            white-space: pre-line;
            margin-left: 0 !important;
            overflow: auto;
        }

        .couponItemDesLink {
            text-decoration: underline;
        }

        .couponTermsAndConditionsPopupIAgreeButtonWrapper {
            display: flex;
            justify-content: center;
            align-items: center;

            .couponTermsAndConditionsPopupIAgreeButton {
                height: 50px;
                width: 315px;
                border-radius: 6px;
                background-color: #000000;
                color: white;
                text-transform: none;
            }
        }

        @include mobile {
            margin: 0;
            padding-left: 18px;
            padding-right: 18px;
            position: fixed;
            left: 0;
            right: 0;
            bottom: 0;
            overflow: auto;
            max-height: 80vh;
            border-radius: 30px 30px 0 0;
        }
    }
} 

.closebuttonWrapperDiv {
    position:relative;
    width: 100%;
    height: 30px;
    .closePopupbutton {
        cursor: pointer;
        float: right;
        padding: 0;
        &:before {
            content: "";
            position: absolute;
            right: 5px;
            top: 5px;
            display: inline-block;
            padding: 1px;
            background-image: url(/static/media/icon.12cc0c19.svg);
            background-size: cover;
            height: 16px;
            width: 16px;
        }
        span {
            display: none;
        }
        &_isArabic {
            float: left;
        }
    }
}

